<resources>
    <string name="app_name">HolaMundo</string>
    <string name="titulo">CALCULADORA</string>
    <string name="numero_uno">Número Uno</string>
    <string name="numero_dos">Número Dos</string>
    <string name="resultado">RESULTADO</string>
    <string name="calcular">CARLCULAR</string>
    <string name="borrar">BORRAR</string>
    <string name="error_uno">"Digite el número uno"</string>
    <string name="error_dos">"Digite el número uno"</string>
    <string name="error_division">"No puede ser Cero"</string>
    <string name="resta">RESTAR</string>
    <string name="suma">SUMAR</string>
    <string name="multiplicacion">MULTPLICACIÓN</string>
    <string name="division">DIVISIÓN</string>
    <string-array name="opciones" >
            <item>@string/suma</item>
            <item>@string/resta</item>
            <item>@string/multiplicacion</item>
            <item>@string/division</item>
    </string-array>
</resources>
